--- a/shop/templates/product/detail.html
+++ b/shop/templates/product/detail.html
@@ -7,10 +7,15 @@
 
 {% block content %}
     <div>
-        <img src="{% if product.image %}{{ MEDIA_URL }}{{ product.image_thumbnail }}{% else %}{% static "image/no_image.png" %}{% endif %}" alt="">
+        <img src="{% if product.image %}{{ MEDIA_URL }}{{ product.image}}{% else %}{% static "image/no_image.png" %}{% endif %}" alt="" width="200" height="180">
         <h1>{{ product.name }}</h1>
         <h2><a href="{{ product.category.get_absolute_url }}">{{ product.category }}</a></h2>
         <p>${{ product.price }}</p>
+        <form action="{% url "cart:cart_add" product.id%}" method="post">
+          {{ cart_product_form }}
+          {% csrf_token %}
+          <input type="submit" value="Add to cart">
+        </form>
         {{ product.description|linebreaks }}
     </div>
     <div class="container-fluid">
