--- a/shop/templates/product/list.html
+++ b/shop/templates/product/list.html
@@ -9,7 +9,7 @@
 {% block content %}
     <div class="container-fluid">
       <div class="row-fluid">
-        <div class="span3">
+        <div class="span2">
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class=" nav nav-list">Categories</li>
@@ -25,19 +25,20 @@
           </div><!--/.well -->
         </div><!--/span-->
 
-        <div class="span9">
+        <div class="span10">
         <h2>{% if category %}{{ category.name }}{% else %}Products{% endif %}</h2>
-        {% for product in products %}
           <div class="row-fluid">
+          {% for product in products %}
             <div class="span4">
                 <a href="{{ product.get_absolute_url }}">
-                    <img src="{% if product.image %}{{ product.image_thumbnail }}{% else %}{% static "img/no_image.png" %}{% endif %}" alt="">
+                    <img src="{% if product.image %}{{ MEDIA_URL }}{{ product.image }}{% else %}{% static "img/no_image.png" %}{% endif %}" alt="" width="200" height="200">
                 </a>
+                <br>
                 <a href="{{ product.get_absolute_url }}">{{ product.name }}</a><br>
                 ${{ product.price }}
             </div><!--/span-->
+          {% endfor %}
           </div><!--/row-->
-        {% endfor %}
         </div><!--/span-->
       </div><!--/row-->
     </div>
