--- a/apps/blog/templates/article_page.html
+++ b/apps/blog/templates/article_page.html
@@ -1,46 +1,75 @@
 <!DOCTYPE html>
 {% extends "base.html" %}
 {% load blog_tags %}
-{% block title %}<title>page</title>{% endblock %}
+{% block title %}<title>{{ article.title }}</title>{% endblock %}
 {% block content %}
-    <div class="row">
-        <div class="col-sm-11 blog-main">
-          <div class="blog-post">
-            <h2 class="blog-post-title">{{ article.title }}</h2>
-            <p class="blog-post-meta">{{ article.created_time }} by {{ article.author }}</a></p>
-            <p class="label label-primary">Tags: {{ article.tags.all|join:"," }}</p>
-            <h4>{{ article.content|safe|markdown }}</h4>
-            <span class="label label-info"><a href={% url "blog:edit_page" article.id %}>change content</a></span>
-          </div><!-- /.blog-post -->
-        </div>
-        <div>
-            {% with comments.count as total_comments %}
-            <h2>
-                {{ total_comments }}comment{{ total_comments|pluralize }}
-            </h2>
-            {% endwith %}
-            {% for comment in comments %}
-            <div>
-                {{ comment.body|linebreaks }}
-                <p class='info'>
-                    Comment {{ forloop.counter }} by {{ comment.name }}
-                    {{ comment.created }}
+<div class="container-fluid">
+<div class="row-fluid">
+     <div class="span3">
+        <div class="well sidebar-nav">
+            <ul class="nav nav-list">
+              <li class="nav-header">目录</li>
+              <li class="active"><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+            </ul>
+        </div><!--/.well -->
+        <div class="well sidebar-nav">
+            <ul class="nav nav-list">
+              <li class="nav-header">目录</li>
+              <li class="active"><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+            </ul>
+        </div><!--/.well -->
+    </div ><!--/.span -->
+    <div class="span9">
+        <div class="row-fluid ">
+            <div >
+                <h1>{{ article.title }}</h1>
+                <p class="blog-post-meta"><strong>{{ article.created_time }} by {{ article.author }}</strong></a></p>
+                <p class="label label-primary">
+                Tags:
+                {% for tag in article.tags.all %}
+                <a href="{% url "blog:post_list_by_tag" tag.slug %}" >{{ tag.name }}</a>
+                {% if not forloop.last %}, {% endif %}
+                {% endfor %}
                 </p>
+                <h4 >{{ article.content|safe|markdown }}</h4>
             </div>
-            {% empty %}
-                <p>There are no comments yet</p>
-            {% endfor %}
-            {% if new_comment %}
-                <h2>Your comment has been added</h2>
-            {% else %}
-                <h2>Add a new comment</h2>
-                <form action="{% url 'blog:article_page' article.id %}" method="post">
-                    {{ comment_form.as_p }}
-                    {% csrf_token %}
-                    <p><input type="submit" value="Add comment"></p>
-                </form>
-            {% endif %}
-        </div>
-    </div>
+            <div>
+                {% with comments.count as total_comments %}
+                <h3>
+                    <span class="badge badge-inverse">{{ total_comments }}</span>comment{{ total_comments|pluralize }}
+                </h3>
+                {% endwith %}
+                {% for comment in comments %}
+                <div >
+                    {{ comment.body|linebreaks }}
+                    <p class="badge">
+                        Comment {{ forloop.counter }} by {{ comment.name }}
+                        {{ comment.created }}
+                    </p>
+                </div>
+                {% empty %}
+                    <p class="label label-info">目前还没有评论</p>
+                {% endfor %}
+                {% if new_comment %}
+                    <h2>Your comment has been added</h2>
+                {% else %}
+                    <h2>Add a new comment</h2>
+                    <form action="{% url 'blog:article_page' article.id %}" method="post">
+                        {{ comment_form.as_p }}
+                        {% csrf_token %}
+                        <p><input type="submit" value="Add comment"></p>
+                    </form>
+                {% endif %}
+            </div>
+        </div><!-- class="row-fluid"-->
+    </div><!-- calss="span8"-->
+</div>
+</div>
 {% endblock %}
 
