--- a/apps/blog/templates/index.html
+++ b/apps/blog/templates/index.html
@@ -4,34 +4,37 @@
 {% load blog_tags %}
 {% block title %}<title>index</title>{% endblock %}
 {% block content %}
-    <div class="row row-offcanvas row-offcanvas-right">
-
-        <div class="col-xs-12 col-sm-9">
-          <div class="row">
-            <div class="col-xs-12 col-lg-9 col-xs-offset-1">
+<div class="container">
+    <div class="row row-fluid">
+        <div class="span9">
+            <div class="col-xs-12 col-lg-9 offset1">
             {% for article in articles %}
                 <div>
                     <a class="lead" href="{% url 'blog:article_page' article.id %}">{{ article.title }}</a>
-                    <h5>{{ article.author }}创建于{{ article.created_time }}</h5>
+                    <br>
+                    <span class=" label label-info">{{ article.author }}创建于{{ article.created_time }}  标签:{{ articel.tags.all|join:"," }}</span>
+                    {% if tag %}
+                    <h4>Posts tagged with "{{ tag.name }}"</h4>
+                    {% endif %}
                     <p>{{ article.excerpt|markdown|truncatewords_html:30}}</p>
                     <p><a class="btn btn-default" href="{% url 'blog:article_page' article.id %}" role="button">View details &raquo;</a></p>
                     <br/>
                 </div>
             {% endfor %}
-            </div><!--/.col-xs-6.col-lg-4-->
-          </div><!--/row-->
-        </div><!--/.col-xs-12.col-sm-9-->
+            </div><!--/.col-xs-12.-->
+        </div>
 
-        <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
-          <div class="list-group">
+        <div class="span3">
+        <div class="col-xs-12 col-sm-10">
+            <div class="list-group">
             <a href="#" class="list-group-item active">最新文章</a>
             {% get_recent_articles as recent_post_list %}
             {% for post in recent_post_list %}
             <a href="{{ post.get_absolute_url }}" class="list-group-item">{{ post.title }}</a>
             {% endfor %}
-          </div>
+            </div>
         </div><!--/.sidebar-offcanvas-->
-        <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
+        <div class="col-xs-12 col-sm-10">
           <div class="list-group">
             <a href="#" class="list-group-item active">目录</a>
             {% archives as date_list %}
@@ -42,18 +45,15 @@
             {% endfor %}
           </div>
         </div><!--/.sidebar-offcanvas-->
-        <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
-          <div class="list-group">
-            <a href="#" class="list-group-item active">标签</a>
-            <a href="#" class="list-group-item">Link</a>
-            <a href="#" class="list-group-item">Link</a>
-            <a href="#" class="list-group-item">Link</a>
-          </div>
+        <div class="col-xs-12 col-sm-10">
+            <div class="list-group">
+                <a href="#" class="list-group-item active">标签</a>
+            </div>
         </div><!--/.sidebar-offcanvas-->
-      </div><!--/row-->
-
-    <nav aria-label="Page navigation">
-        <ul class="pagination">
+        </div>
+    </div><!--/row-->
+    <nav aria-label="Page navigation offset5">
+        <ul class="pagination ">
             {% if articles.has_previous %}
                 <li>
                     <a href="?page={{ articles.previous_page_number }}" aria-label="Previous">
@@ -80,4 +80,5 @@
             {% endif %}
         </ul>
     </nav>
+</div>
 {% endblock %}
