--- a/apps/shop/templates/product/list.html
+++ b/apps/shop/templates/product/list.html
@@ -9,7 +9,7 @@
 {% block content %}
     <div class="container-fluid">
       <div class="row-fluid">
-        <div class="span2">
+        <div class="span3">
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class=" nav nav-list">Categories</li>
@@ -25,13 +25,13 @@
           </div><!--/.well -->
         </div><!--/span-->
 
-        <div class="span10">
-        <h2>{% if category %}{{ category.name }}{% else %}Products{% endif %}</h2>
+        <div class="span9">
+        <h2>{% if category %}{{ category.name }}{% else %}产品{% endif %}</h2>
           <div class="row-fluid">
           {% for product in products %}
             <div class="span4">
                 <a href="{{ product.get_absolute_url }}">
-                    <img src="{% if product.image %}{{ MEDIA_URL }}{{ product.image }}{% else %}{% static "img/no_image.png" %}{% endif %}" alt="" width="200" height="200">
+                    <img src="{% if product.image %}{{ MEDIA_URL }}{{ product.image }}{% else %}{% static "img/no_image.png" %}{% endif %}" class="img-rounded" width="200" height="200">
                 </a>
                 <br>
                 <a href="{{ product.get_absolute_url }}">{{ product.name }}</a><br>
@@ -45,19 +45,5 @@
 {% endblock %}
 {% block script %}
 <script>
-    <script src="http://v2.bootcss.com/assets/js/bootstrap-scrollspy.js"></script>
-    <script src="http://v2.bootcss.com/js/bootstrap-transition.js"></script>
-    <script src="http://v2.bootcss.comassets/js/bootstrap-alert.js"></script>
-    <script src="http://v2.bootcss.comassets/js/bootstrap-modal.js"></script>
-    <script src="http://v2.bootcss.comassets/js/bootstrap-dropdown.js"></script>
-    <script src="http://v2.bootcss.comassets/js/bootstrap-scrollspy.js"></script>
-    <script src="http://v2.bootcss.comassets/js/bootstrap-tab.js"></script>
-    <script src="http://v2.bootcss.comassets/js/bootstrap-tooltip.js"></script>
-    <script src="http://v2.bootcss.comassets/js/bootstrap-popover.js"></script>
-    <script src="http://v2.bootcss.comassets/js/bootstrap-button.js"></script>
-    <script src="http://v2.bootcss.comassets/js/bootstrap-collapse.js"></script>
-    <script src="http://v2.bootcss.comassets/js/bootstrap-carousel.js"></script>
-    <script src="http://v2.bootcss.comassets/js/bootstrap-typeahead.js"></script>
-
 </script>
 {% endblock %}
