--- a/apps/shop/templates/product/list.html
+++ b/apps/shop/templates/product/list.html
@@ -26,7 +26,7 @@
         </div><!--/span-->
 
         <div class="span9">
-        <h2>{% if category %}{{ category.name }}{% else %}产品{% endif %}</h2>
+        <h2>{% if category %}{{ category.name }}{% else %}Products{% endif %}</h2>
           <div class="row-fluid">
           {% for product in products %}
             <div class="span4">
