--- a/apps/about/templates/login.html
+++ b/apps/about/templates/login.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
-{% block title %}login{% endblock %}
+{% block title %}<title>login</title>{% endblock %}
+{% block style %}
+<style>
+    #login-page.container {
+        width:320px;
+    }
+</style>
+{% endblock %}
 {% block content %}
-  <div class="col-xs-6 col-md-offset-4">
+  <div id="login-page" class="container">
     <form class="navbar-form navbar-left" action="{% url 'about:login' %}" method="post">
-        <div class="form-group">
-            <!--<label>Username</label>
-            <input type="text" class="form-control" placeholder="username"></br>
-            <label>Password</label>
-            <input type="text" class="form-control" placeholder="password">
-        </div>
-        </br><-->
         {{ form.as_p }}
         {% csrf_token %}
         <button type="submit" class="btn btn-default">Login</button>
