--- a/apps/blog/templates/index.html
+++ b/apps/blog/templates/index.html
@@ -37,9 +37,8 @@
         <div class="col-xs-12 col-sm-10">
           <div class="list-group">
             <a href="#" class="list-group-item active">目录</a>
-            {% archives as date_list %}
-            {% for date in date_list %}
-            <a href="">{{ date.year }}年{{ date.month }}月</a>
+            {% for category in categories %}
+            <a href="">{{ category }}</a>
             {% empty %}
             暂无分类
             {% endfor %}
