--- a/application/blog/templates/article_page.html
+++ b/application/blog/templates/article_page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 {% extends "base.html" %}
 {% load blog_tags %}
+{% load crispy_forms_tags %}
 {% block title %}<title>{{ article.title }}</title>{% endblock %}
 {% block content %}
 <div class="container-fluid">
@@ -56,8 +57,8 @@
                 </h3>
                 {% endwith %}
                 {% for comment in comments %}
-                <div >
-                    {{ comment.body|linebreaks }}
+                <div class="tasks">
+                    <p class="blog_comment">{{ comment.body|linebreaks }}</p>
                     <p class="badge">
                         Comment {{ forloop.counter }} by {{ comment.name }}
                         {{ comment.created }}
@@ -66,15 +67,16 @@
                 {% empty %}
                     <p class="label label-info">目前还没有评论</p>
                 {% endfor %}
-                {% if new_comment %}
-                    <h2>Your comment has been added</h2>
-                {% else %}
-                    <h2>Add a new comment</h2>
-                    <form action="{% url 'blog:article_page' article.id %}" method="post">
-                        {{ comment_form.as_p }}
-                        {% csrf_token %}
-                        <p><input type="submit" value="Add comment"></p>
-                    </form>
+                {% if request.user.is_authenticated %}
+                    {% if new_comment %}
+                        <h3>你的评论已经添加</h3>
+                    {% else %}
+                        <h2>添加新评论</h2>
+                        <form action="{% url 'blog:article_page' article.id %}" method="post">
+                            {% crispy comment_form %}
+                            {% csrf_token %}
+                        </form>
+                    {% endif %}
                 {% endif %}
             </div>
         </div><!-- class="row-fluid"-->
