--- a/application/about/templates/profile/messages.html
+++ b/application/about/templates/profile/messages.html
@@ -1,5 +1,6 @@
 {% extends "base_profile.html" %}
 {% load staticfiles %}
+{% load notifications_tags %}
 {% block title %}<title>messages</title>{% endblock %}
 {% block content %}
 <div class="span9">
@@ -9,19 +10,13 @@
 	<h2>
 	</h2>
 	<ul class="messages">
+
 		<li class="well">
 			<p class="message">
-				Ut fermentum tortor at enim blandit gravida et et odio. Quisque eu libero vitae nibh malesuada sagittis. Integer eget turpis velit. Maecenas auctor eleifend ante in dictum. Proin mattis dictum imperdiet. Nam sed leo ut massa volutpat pharetra eget vel nisi. Vestibulum vel nunc felis, in ultrices neque. Duis ut rutrum lectus. Vivamus ultricies aliquam est ac gravida. Nulla facilisis sem sed est sagittis sed auctor turpis mollis. Duis ultricies viverra dapibus. Nunc lectus quam, rutrum aliquet cursus vitae, gravida vel arcu.
+				{% live_notify_list %}
 			</p>
-			<span class="meta">Written <em>2 weeks ago</em> by <em>Jill</em></span>
 		</li>
-		<li class="well">
-			<p class="message">
-				Donec id consequat odio. Etiam felis tellus, pretium tincidunt malesuada quis, vestibulum a leo. Cras tortor enim, elementum nec pretium non, vestibulum sit amet massa. Vivamus non velit quis purus luctus pretium et ut quam. Aenean eu urna nulla, quis iaculis nunc. Nam consectetur erat nec turpis dapibus ac sodales dolor pulvinar. Fusce eu consectetur risus. In ut erat sit amet nunc tempor mattis sit amet id diam.
-			</p>
-			<span class="meta">Written <em>1 week ago</em> by <em>John</em></span>
-		</li>
-		<li class="well">
+		<!--li class="well">
 			<p class="message">
 				Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus enim nibh, congue nec tincidunt sed, luctus ullamcorper leo. Nunc ac mauris augue. Nam non nulla tellus, vitae volutpat nibh. Maecenas fringilla vestibulum neque vitae tristique. Ut fermentum accumsan dolor, ut tincidunt lacus dictum non. Proin non ultrices libero. Praesent hendrerit, dolor ut facilisis porta, lorem massa ullamcorper dolor, at dictum elit augue vel lorem. Pellentesque vitae elit quis erat congue gravida ac sed urna. Vivamus vitae purus lectus. Maecenas nec dui lorem. Mauris viverra, est et mattis malesuada, sapien lectus congue justo, eget ultricies lorem ante a nulla. In facilisis nisi in dolor ultricies id hendrerit tortor suscipit.
 			</p>
@@ -48,7 +43,7 @@
 					<span class="meta">Written <em>1 day ago</em> by <em>Jill</em></span>
 				</li>
 			</ul>
-		</li>
+		</li-->
 	</ul>
 	<a class="toggle-link" href="#message-reply"><i class="icon-plus"></i> Reply</a>
 	<form id="message-reply" class="form-horizontal hidden">
