--- a/application/blog/templates/tag_list.html
+++ b/application/blog/templates/tag_list.html
@@ -1,12 +1,56 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 
 {% block title %}<title>Tag</title>{% endblock %}
+{% block js %}
+<script src="{% static "js/d3.layout.cloud.js" %}"></script>
+<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+{% endblock %}
 
 {% block content%}
 <div class="container">
     {% for tag in tags %}
-    <a href="{% url "blog:post_list_by_tag" tag.slug %}" class="label label-primary">{{ tag.name }}</a>
+        <a href="{% url "blog:post_list_by_tag" tag.slug %}" class="label label-primary">{{ tag.name }}</a>
     {% if not forloop.last %}{% endif %}
     {% endfor %}
+    <div id="vis"></div>
 </div>
+
+
+{% endblock %}
+{% block script %}
+<script>
+    var fill = d3.scale.category20();
+    var layout = d3.layout.cloud()
+        .size([500, 500])
+        .words([
+          "Hello", "world", "normally", "you", "want", "more", "words",
+          "than", "this"].map(function(d) {
+          return {text: d, size: 10 + Math.random() * 90};
+        }))
+        .padding(5)
+        .rotate(function() { return ~~(Math.random() * 2) * 90; })
+        .font("Impact")
+        .fontSize(function(d) { return d.size; })
+        .on("end", draw);
+    layout.start();
+    function draw(words) {
+      d3.select("#vis").append("svg")
+          .attr("width", layout.size()[0])
+          .attr("height", layout.size()[1])
+        .append("g")
+          .attr("transform", "translate(" + layout.size()[0] / 2 + "," + layout.size()[1] / 2 + ")")
+        .selectAll("text")
+          .data(words)
+        .enter().append("text")
+          .style("font-size", function(d) { return d.size + "px"; })
+          .style("font-family", "Impact")
+          .style("fill", function(d, i) { return fill(i); })
+          .attr("text-anchor", "middle")
+          .attr("transform", function(d) {
+            return "translate(" + [d.x, d.y] + ")rotate(" + d.rotate + ")";
+          })
+          .text(function(d) { return d.text; });
+    }
+</script>
 {% endblock %}
