--- a/application/about/templates/profile/messages.html
+++ b/application/about/templates/profile/messages.html
@@ -1,7 +1,7 @@
 {% extends "base_profile.html" %}
 {% load staticfiles %}
 {% load notifications_tags %}
-{% block title %}<title>messages</title>{% endblock %}
+{% block title %}<title>站内信</title>{% endblock %}
 {% block content %}
 <div class="span9">
 	<h1>
@@ -13,7 +13,7 @@
 
 		<li class="well">
 			<p class="message">
-				{% live_notify_list %}
+				{% live_notify_list %}<button id="had_read" type="submit" class="btn btn-default">已读</button>
 			</p>
 		</li>
 		<!--li class="well">
@@ -61,4 +61,9 @@
 		</fieldset>
 	</form>
 </div>
+{% endblock %}
+{% block js %}
+<script>
+
+</script>
 {% endblock %}
