--- a/application/blog/templates/about.html
+++ b/application/blog/templates/about.html
@@ -26,16 +26,28 @@
             <h2 id="-">关于我</h2>
             <p>这是我的博客，致力于网页开发</p>
             <h2 id="-bootstrap-">技能点</h2>
-            <span>fjsdk</span>
+            <span>linux</span>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em;">
-                0%
+              <div class="progress-bar" role="progressbar" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10" style="min-width: 2em;">
+                60%
               </div>
             </div>
-            <span>fjsdk</span>
+            <span>django</span>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="34" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em;">
-                34%
+              <div class="progress-bar" role="progressbar" aria-valuenow="4" aria-valuemin="0" aria-valuemax="10" style="min-width: 2em;">
+                40%
+              </div>
+            </div>
+            <span>python</span>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="10" style="min-width: 2em;">
+                50%
+              </div>
+            </div>
+            <span>html js css</span>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="10" style="min-width: 2em;">
+                20%
               </div>
             </div>
             <h2 id="-">联系我</h2>
