--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
     <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     {% block style %}<style></style>{% endblock style %}
+    {% block js %}{% endblock %}
     </head>
 
     <body>
@@ -37,24 +38,24 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'blog:index' %}">Home</a></li>
+            <li class="active"><a href="{% url 'blog:index' %}">主页</a></li>
             <li><a href="{% url 'blog:tag_list' %}">Tag</a></li>
             <li><a href="#about">xxoo</a></li>
             <li><a href="{% url 'shop:product_list' %}">Shop</a></li>
-            <li><a href="{% url 'blog:about_me' %}">About</a></li>
+            <li><a href="{% url 'blog:about_me' %}">关于</a></li>
 
             <li class="dropdown  dropdown-menu-right">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                    Account
+                    账户
                     <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu ">
                   {% if request.user.is_authenticated %}
-                    <li><a href="{% url 'about:profile' %}"><i class="glyphicon glyphicon-user"></i>Profile</a></li>
-                    <li><a href="{% url 'about:logout' %}"><i class="glyphicon glyphicon-off"></i>logout</a></li>
+                    <li><a href="{% url 'about:profile' %}"><i class="glyphicon glyphicon-user"></i>个人中心</a></li>
+                    <li><a href="{% url 'about:logout' %}"><i class="glyphicon glyphicon-off"></i>退出</a></li>
                   {% else %}
-                    <li><a href="{% url 'about:register' %}">Register</a></li>
-                    <li><a href="{% url 'about:login' %}">Login</a></li>
+                    <li><a href="{% url 'about:register' %}">注册</a></li>
+                    <li><a href="{% url 'about:login' %}">登录</a></li>
                   {% endif %}
                 </ul>
             </li>
