--- a/templates/base_profile.html
+++ b/templates/base_profile.html
@@ -95,7 +95,7 @@
                                 </li>
                                 <li>
                                     <a href="{% url "about:messages" %}"><i class="icon-envelope"></i> 站内信
-                                    {% live_notify_badge classes="badge" %}{% inbox_count %}
+                                    {% live_notify_badge classes="badge" %}
                                     </a>
                                 </li>
                                 <li>
