--- a/application/about/templates/profile/messages.html
+++ b/application/about/templates/profile/messages.html
@@ -10,12 +10,21 @@
 	<h2>
 	</h2>
 	<ul class="messages">
-
+		{% notifications_unread as unread_count %}
+		{% if unread_count %}
 		<li class="well">
 			<p class="message">
-				{% live_notify_list %}<button id="had_read" type="submit" class="btn btn-default">已读</button>
+				{% live_notify_list %}
 			</p>
 		</li>
+        <button id="had_read" type="submit" class="btn btn-default" >已读</button>
+    {% else %}
+    <li class="well">
+			<p class="message">
+				目前没有消息
+			</p>
+		</li>
+    {% endif %}
 		<!--li class="well">
 			<p class="message">
 				Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus enim nibh, congue nec tincidunt sed, luctus ullamcorper leo. Nunc ac mauris augue. Nam non nulla tellus, vitae volutpat nibh. Maecenas fringilla vestibulum neque vitae tristique. Ut fermentum accumsan dolor, ut tincidunt lacus dictum non. Proin non ultrices libero. Praesent hendrerit, dolor ut facilisis porta, lorem massa ullamcorper dolor, at dictum elit augue vel lorem. Pellentesque vitae elit quis erat congue gravida ac sed urna. Vivamus vitae purus lectus. Maecenas nec dui lorem. Mauris viverra, est et mattis malesuada, sapien lectus congue justo, eget ultricies lorem ante a nulla. In facilisis nisi in dolor ultricies id hendrerit tortor suscipit.
@@ -62,8 +71,36 @@
 	</form>
 </div>
 {% endblock %}
-{% block js %}
+{% block script %}
 <script>
+        $(document).ready(function(){
 
+          $.ajaxSetup({
+            data: {csrfmiddlewaretoken: '{{ csrf_token }}' },
+          });
+
+          $('#had_read').click(function(){
+                  var name = $("#had_read").val();                 //获得form中用户输入的had_read 注意这里的id_name 与你html中的id一致
+                  $.ajax({
+                      type:"POST",
+                      data: {},
+                      url: "{% url 'about:article_had_read' %}", //后台处理函数的url 这里用的是static url 需要与urls.py中的name一致
+                      cache: false,
+                      dataType: "html",
+                      beforeSend:function(xhr, settings){
+                      xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}");
+                      },
+											success: function(data) {
+												alert("消息全部标记为已读")
+												window.location.href="{% url 'about:about_user' %}";
+											},
+                      error: function(){
+                          alert("false");
+                      }
+                  });
+                  return false;
+              });
+
+        });
 </script>
 {% endblock %}
