--- a/templates/base_account.html
+++ b/templates/base_account.html
@@ -32,7 +32,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="{% url 'blog:index' %}">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="{% url 'blog:about_me' %}">About</a></li>
             <li><a href="#contact">Contact</a></li>
             <li class="dropdown  dropdown-menu-right">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
